# PCP

colors_format/: pyproject.toml
colors_format/colors_format/: __init__.py
colors_format/tests/: test_colors_format.py
