[tool.poetry]
name = "colors_format"
version = "1.0.4"
description = "Tired of having to type up ANSI escape codes whenever you want to color some text, then use this package, Note: this only supports a few colors for now."
authors = ["Stefan Dikov <stefan.v.dikov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
